--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
 	"start": "hexo server -d -p 5000",
     "build": "hexo generate",
-	"depoly": "hexo depoly",
+	"depoly": "hexo depoly"
   },
   "hexo": {
     "version": "3.9.0"
