--- a/.travis.yml
+++ b/.travis.yml
@@ -14,26 +14,21 @@ install:
 script:
   - npm run clear
   - npm run generate
-  - hexo generate
-  - hexo d
+  - hexo generate 
 
 #after_script前5句是把部署分支的.git文件夹保护起来，用于保留历史部署的commit日志，否则部署分支永远只有一条commit记录。
-#命令里面的变量都是在Travis CI里配置过的。
-after_script:
-  - git clone ${base} .temp
-  - cd .temp
-  - git checkout master
-  - cd ../
-  - mv .temp/.git dist
-  - cd dist
-  - git config user.name "${GT_NAME}"
-  - git config user.email "${GT_EMAIL}"
-  - git add .
-  - git commit -m ":construction_worker:- Build & Deploy by Travis CI"
-  - git push --force --quiet "https://${GT_Token}@${website}" master
+#命令里面的变量都是在Travis CI里配置过的。 
 # E: Build LifeCycle
 
 # 只有指定的分支提交时才会运行脚本
 branches:
   only:
     - master
+    
+deploy:
+  - provider: pages
+    skip_cleanup: true
+    github_token: $GT_Token
+    local_dir: docs
+    name: $GT_USER
+    email: $GT_EMAIL
