--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -158,9 +158,7 @@ baidu_push: false
 # External url should start with http:// or https://
 menu:
   home: / || home
-  Docs:
-    技术人生
-    人生领悟
+  分类: /categories/ || th 
   #about: /about/ || user
   tags: /tags/ || tags
   #categories: /categories/ || th
