--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -158,9 +158,12 @@ baidu_push: false
 # External url should start with http:// or https://
 menu:
   home: / || home
-  分类: /categories/ || th 
+  技术: /categories/技术/ || th 
+  随笔: /categories/随笔/ || th 
+  读书: /categories/读书/ || th 
+  管理: /categories/管理/ || th 
   #about: /about/ || user
-  tags: /tags/ || tags
+  归档: /tags/ || tags
   #categories: /categories/ || th
   #Docs:
   #archives: /archives/ || archive
