--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -202,6 +202,9 @@ site_state: true
 # Value before `||` delimiter is the target permalink.
 # Value after `||` delimiter is the name of FontAwesome icon. If icon (with or without delimiter) is not specified, globe icon will be loaded.
 social:
+  博客园: https://cnblogs/xiyuanmore || 博客园
+  CSDN: https://csdn.com/farway000 || CSDN
+  微信公众号: https://mp.weixin.qq.com/mp/profile_ext?action=home&__biz=MzU2OTY3MTYzOA==&subscene=0#wechat_redirect || 【DotNET技术圈】
   #GitHub: https://github.com/yourname || github
   #E-Mail: mailto:yourname@gmail.com || envelope
   #Weibo: https://weibo.com/yourname || weibo
