--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -1,4 +1,4 @@
-# ---------------------------------------------------------------
+﻿# ---------------------------------------------------------------
 # Theme Core Configuration Settings
 # See: https://theme-next.org/docs/theme-settings/
 # ---------------------------------------------------------------
@@ -202,7 +202,7 @@ site_state: true
 # Value before `||` delimiter is the target permalink.
 # Value after `||` delimiter is the name of FontAwesome icon. If icon (with or without delimiter) is not specified, globe icon will be loaded.
 social:
-  博客园: https://cnblogs/xiyuanmore || 博客园
+  博客园: https://www.cnblogs.com/xiyuanmore || 博客园
   CSDN: https://blog.csdn.net/farway000 || CSDN 
   #GitHub: https://github.com/yourname || github
   #E-Mail: mailto:yourname@gmail.com || envelope
